[gd_scene load_steps=4 format=2]

[ext_resource path="res://Scenes/Prefabs/UI.gd" type="Script" id=1]
[ext_resource path="res://art_assets/Xolonium-Regular.ttf" type="DynamicFontData" id=2]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 2 )

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 131.0
margin_top = 22.0
margin_right = 215.0
margin_bottom = 100.0
custom_fonts/font = SubResource( 1 )

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="CountDownTimer" type="Timer" parent="."]

[node name="GameOverLabel" type="Label" parent="."]
margin_right = 40.0
margin_bottom = 14.0

[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="CountDownTimer" to="." method="_on_CountDownTimer_timeout"]
