[gd_scene load_steps=2 format=2]

[ext_resource path="res://UI.gd" type="Script" id=1]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="MessageLabel" type="Label" parent="."]
margin_left = 399.0
margin_top = 156.0
margin_right = 566.0
margin_bottom = 298.0
text = "This is a message\\nbeans"

[node name="ScoreLabel" type="Label" parent="."]
margin_left = 415.0
margin_top = 182.0
margin_right = 567.0
margin_bottom = 333.0
text = "This is a score label ;/"

[node name="StartButton" type="Button" parent="."]
margin_left = 232.0
margin_top = 232.0
margin_right = 598.0
margin_bottom = 350.0
text = "Start"

[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
